# routes/produto.route.js
@@ -6,21 +6,18 @@ const router = express.Router();
 let ctrl = new ProdutoController();
 
 router.get("/", (req, res) => {
-    // #swagger.tags = ['Produto'']
+    // #swagger.tags = ['Produto']
     // #swagger.summary = 'Endpoint para retornar todos os produtos'
     ctrl.listar(req, res);
 });
 
 router.post("/", (req, res) => [
-    //#swagger.tags = ['Produto'']
+    //#swagger.tags = ['Produto']
     //#swagger.summary = 'Cadastra um produto'
     /*  #swagger.requestBody = {
             required: true,
             content: {
                 "application/json": {
-                    schema: {
-                        $ref: "#/components/schemas/produtoEntity"
-                    }  
                 }
             }
         } 
@@ -29,27 +26,25 @@ router.post("/", (req, res) => [
 ]);
 
 router.delete("/:id", (req, res) => {
-    //#swagger.tags = ['Produto'']
+    //#swagger.tags = ['Produto']
     //#swagger.summary = 'Deletar um produto'
     ctrl.deletar(req, res);
 });
 
 router.get("/:id", (req, res) => {
-    //#swagger.tags = ['Produto'']
+    //#swagger.tags = ['Produto']
     //#swagger.summary = 'Retorna um produto baseado em um código'
     ctrl.obter(req, res);
 });
 
 router.put("/", (req, res) => {
-    //#swagger.tags = ['Produto'']
+    //#swagger.tags = ['Produto']
     //#swagger.summary = 'Altera um produto'
     /*  #swagger.requestBody = {
             required: true,
             content: {
                 "application/json": {
-                    schema: {
-                        $ref: "#/components/schemas/produtoEntity"
-                    }  
+
                 }
             }
         } 
@@ -67,9 +62,7 @@ router.patch("/", (req, res) => {
         required: true,
         content: {
             "application/json": {
-                schema: {
-                    $ref: "#/components/schemas/produtoEntity"
-                }  
+ 
             }
         }
     } 
